# libshadesocks

./: .gitmodules  CMakeLists.txt  readme.md
lib/cryptopp_cmake/: CMakeLists.txt
resource/: icon.sketch
src/: ss.cc  ss.h  ss_encrypt.cc  ss_encrypt.h  ss_encrypt_test.cc  ss_server.cc  ss_server.h  ss_server_test.cc  ss_test.cc
src/ss/: connection.h  encrypt.h  handle.h  server.h
test/: ss_connection_test.cc  ss_encrypt_test.cc  ss_handle_test.cc  ss_server_test.cc  ss_test.cc  ss_test.h
